* Some index updating functions did not take into account that not all nodes   are put into all indices. For example, symlinks aren't part of the size   index. This fixes bug #2704. * Also, Inode::NeedsTrimming() now ignores symlinks that have no data stream,   it's const now, too. * Added helper methods Inode::In{Name|Size|LastModified}Index(), and use it   where appropriate. * Clarified Inode::Create() description with regards to name vs. parent.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27471 a95241bf-73f2-0310-859d-f6bbb57e9c96